[tool.poetry]
name = "deadlock-analytics-api"
version = "0.1.0"
description = ""
authors = ["Manuel Raimann <raimannma@outlook.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
prometheus-fastapi-instrumentator = "^7.0.0"
clickhouse-pool = "^0.6.0"
redis = { version = "^5.2.0", extras = ["hiredis"] }
psycopg2-binary = "^2.9.10"
uuid = "^1.30"
cachetools = "^5.5.0"
pika = "^1.3.2"
sentry-sdk = { version = "^2.18.0", extras = ["fastapi"] }
granian = "^1.6.3"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"


[tool.poetry.group.mmr.dependencies]
tqdm = "^4.67.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
