[project]
name = "deadlock-analytics-api"
version = "0.1.0"
description = ""
authors = [
    { name = "Manuel Raimann", email = "raimannma@outlook.de" },
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=5.5.0",
    "clickhouse-pool>=0.6.0",
    "fastapi>=0.115.5",
    "granian<1.7.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "redis[hiredis]>=5.2.0",
    "requests>=2.32.3",
    "sentry-sdk[fastapi]>=2.19.0",
    "uuid>=1.30",
]

[dependency-groups]
dev = [
    "ruff>=0.9.9",
]

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
